# rfx

./: Cargo.toml  README.md
src/: cli.yml  converter.rs  converter_registry.rs  main.rs
src/converter/: error.rs  exchange_rate_api.rs
src/converter/error/: converter_request_error.rs
